--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "browser-sync start --server --files src/**/* --startPath src --index index.html"
+    "start": "browser-sync start --server --files src/**/* --index index.html"
   },
   "author": "",
   "license": "ISC",
